# projects

./: .gitignore  pyproject.toml  setup.py
Appointment_manager/: .gitignore  README.md  alembic.ini  app.py  requirements.txt
Appointment_manager/alembic/: env.py
Appointment_manager/alembic/versions/: ca42dbc93b00_generate_models.py
Appointment_manager/appoms/: __init__.py  config.py  pages.py  user_manager.py
Appointment_manager/appoms/controllers/: profile.py  services.py  users.py
Appointment_manager/appoms/models/: appointments.py  services.py  users.py
Appointment_manager/appoms/static/: index.css
Appointment_manager/appoms/templates/: _navigation.html  base.html
Appointment_manager/appoms/templates/pages/: home.html
Appointment_manager/appoms/templates/profiles/: user_profile.html
Appointment_manager/appoms/templates/view_services/: create_service.html  list_services.html
Appointment_manager/appoms/templates/views/: list_users.html  login.html  providers.html  roles.html  signup.html  user_home.html
Appointment_manager/migrations/versions/: 04f75e6e2de9_update_relationship_column.py  211b099f23e0_update_user_appointment_relationshio_to_.py  45ea6e9d679d_add_updated_at_field.py  94cd346436ab_generate_tables.py
appoms/: __init__.py  form.py
appoms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
appoms/controllers/: profiles.py
appoms/controllers/auth/: login.py  login.py~  register.py  user.py
appoms/models/: users.py
appoms/static/: index.css
appoms/templates/: login.html  profile.html  register.html
